[gd_scene load_steps=4 format=2]

[ext_resource path="res://Door.gd" type="Script" id=1]
[ext_resource path="res://assets/572984__iainmccurdy__piano-destruction-crash.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/493163__breviceps__buzzer-sounds-1-wrong-answer-error.wav" type="AudioStream" id=4]

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="Audio_Open" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -9.0

[node name="Audio_Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -9.0

[node name="Body" type="StaticBody2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="Body"]
position = Vector2( -64, -32 )
color = Color( 0.517647, 0.517647, 0.517647, 1 )
polygon = PoolVector2Array( 0, 8, 8, 0, 120, 0, 128, 8, 128, 56, 120, 64, 8, 64, 0, 56 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body"]
position = Vector2( -64, -32 )
polygon = PoolVector2Array( 8, 0, 120, 0, 128, 8, 128, 56, 120, 64, 8, 64, 0, 56, 0, 8 )

[node name="Area2D" type="Area2D" parent="Body"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body/Area2D"]
position = Vector2( -64, -32 )
polygon = PoolVector2Array( 8, 0, 120, 0, 128, 8, 128, 56, 120, 64, 8, 64, 0, 56, 0, 8 )

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LockTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Body/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_OpenTimer_timeout"]
[connection signal="timeout" from="LockTimer" to="." method="_on_LockTimer_timeout"]
